Intergrated docker, basic back/front end

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -64,7 +64,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 # sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql://zjc:your_password@localhost:5432/aiquiz
+sqlalchemy.url = postgresql://zjc:123456@localhost:5432/aiquiz
 
 
 
