--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,15 @@ FROM python:3.10
 
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app ./app
-COPY .env .env
+COPY . .
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+
+# COPY requirements.txt .
+
+# COPY ./app ./app
+# COPY .env .env
+# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
