--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   backend:
     build: ./backend
@@ -13,10 +12,15 @@ services:
     build: ./frontend
     ports:
       - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules  # 防止 node_modules 被覆盖
     env_file:
       - ./frontend/.env
     depends_on:
       - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true  # 热更新相关，可选
 
   db:
     image: postgres:15
@@ -24,11 +28,21 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: aiquiz
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: zjc
+      POSTGRES_PASSWORD: 123456
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: zjc@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 123456
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
 
 volumes:
   pgdata:
