--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     build: ./frontend
     ports:
       - "5173:5173"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules # 防止 node_modules 被覆盖
+    # volumes:
+    #   - ./frontend:/app
+    #   - /app/node_modules # 防止 node_modules 被覆盖
     env_file:
       - ./frontend/.env
     depends_on:
