--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,24 @@
+# FROM python:3.10
+
+# WORKDIR /app
+# COPY requirements.txt .
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# COPY . .
+
+# CMD ["bash", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"]
+# # CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000","--reload"]
+
+# COPY wait-for-postgres.sh /wait-for-postgres.sh
+# RUN chmod +x /wait-for-postgres.sh
+
 FROM python:3.10
 
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000","--reload"]
-
-
-# COPY requirements.txt .
-
-# COPY ./app ./app
-# COPY .env .env
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["bash", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"]
