--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,64 @@
+# services:
+#   db:
+#     image: postgres:15
+#     ports:
+#       - "5432:5432"
+#     environment:
+#       POSTGRES_DB: aiquiz
+#       POSTGRES_USER: zjc
+#       POSTGRES_PASSWORD: 123456
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data
+#     restart: always
+#   backend:
+#     build: ./backend
+#     ports:
+#       - "8000:8000"
+#     env_file:
+#       - ./backend/.env
+#     depends_on:
+#       - db
+
+#   frontend:
+#     build: ./frontend
+#     ports:
+#       - "5173:5173"
+#     # volumes:
+#     #   - ./frontend:/app
+#     #   - /app/node_modules # 防止 node_modules 被覆盖
+#     env_file:
+#       - ./frontend/.env
+#     depends_on:
+#       - backend
+#     environment:
+#       - CHOKIDAR_USEPOLLING=true # 热更新相关，可选
+#       # - NODE_ENV=development
+
+#   pgadmin:
+#     image: dpage/pgadmin4
+#     environment:
+#       PGADMIN_DEFAULT_EMAIL: zjc@gmail.com
+#       PGADMIN_DEFAULT_PASSWORD: 123456
+#     ports:
+#       - "5050:80"
+#     depends_on:
+#       - db
+
+# volumes:
+#   pgdata:
 services:
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: aiquiz
+      POSTGRES_USER: zjc
+      POSTGRES_PASSWORD: 123456
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: always
+
   backend:
     build: ./backend
     ports:
@@ -7,32 +67,16 @@ services:
       - ./backend/.env
     depends_on:
       - db
+    restart: always
 
   frontend:
     build: ./frontend
     ports:
       - "5173:5173"
-    # volumes:
-    #   - ./frontend:/app
-    #   - /app/node_modules # 防止 node_modules 被覆盖
     env_file:
       - ./frontend/.env
     depends_on:
       - backend
-    environment:
-      - CHOKIDAR_USEPOLLING=true # 热更新相关，可选
-      # - NODE_ENV=development
-  db:
-    image: postgres:15
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_DB: aiquiz
-      POSTGRES_USER: zjc
-      POSTGRES_PASSWORD: 123456
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    restart: always
 
   pgadmin:
     image: dpage/pgadmin4
